# random-shader-window

./: CONTRIBUTING.md  Cargo.toml  README.md  index.html
.devcontainer/: devcontainer.json
.github/workflows/: deploy-gh-pages.yml  rust-clippy.yml  rust.yml
src/: app.rs  main.rs  shader.wgsl
