[package]
name = "random_shader_window"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[dependencies]
winit = "0.30.9"
wgpu = { version = "24.0.1", features = ["webgl"] }
bytemuck = "1.22.0"
pollster = "0.4.0"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen = "0.2.78"
wasm-server-runner = "0.1.0"
